import type { APIRoute } from 'astro';
import { getPlanningClient } from '../../../../lib/grpc-client';

export const GET: APIRoute = async ({ url }) => {
  const statusFilter = url.searchParams.get('status');

  try {
    const client = await getPlanningClient();

    // TODO: Implement ListTaskDerivationCeremonies gRPC method in planning service
    // The backend API for task derivation ceremonies does not exist yet.
    // This endpoint needs to be implemented in the planning service.

    return new Response(
      JSON.stringify({
        ceremonies: [],
        total_count: 0,
        success: true,
        message: 'Task derivation ceremonies API not yet implemented in backend.',
      }),
      {
        status: 200,
        headers: { 'Content-Type': 'application/json' },
      }
    );
  } catch (error) {
    return new Response(
      JSON.stringify({
        success: false,
        message: error instanceof Error ? error.message : 'Unknown error',
      }),
      {
        status: 500,
        headers: { 'Content-Type': 'application/json' },
      }
    );
  }
};

export const POST: APIRoute = async ({ request }) => {
  try {
    const body = await request.json();
    const { created_by, story_ids } = body;

    if (!created_by || !Array.isArray(story_ids)) {
      return new Response(
        JSON.stringify({
          success: false,
          message: 'created_by and story_ids are required',
        }),
        {
          status: 400,
          headers: { 'Content-Type': 'application/json' },
        }
      );
    }

    const client = await getPlanningClient();

    // TODO: Implement CreateTaskDerivationCeremony gRPC method in planning service
    // The backend API for task derivation ceremonies does not exist yet.
    // This endpoint needs to be implemented in the planning service.

    return new Response(
      JSON.stringify({
        success: false,
        message: 'Task derivation ceremonies API not yet implemented in backend. This feature requires backend support.',
      }),
      {
        status: 501, // Not Implemented
        headers: { 'Content-Type': 'application/json' },
      }
    );
  } catch (error) {
    return new Response(
      JSON.stringify({
        success: false,
        message: error instanceof Error ? error.message : 'Unknown error',
      }),
      {
        status: 500,
        headers: { 'Content-Type': 'application/json' },
      }
    );
  }
};







